--- a/app/src/main/res/layout/activity_just_java.xml
+++ b/app/src/main/res/layout/activity_just_java.xml
@@ -8,69 +8,74 @@
 
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="-16dp"
+        android:id="@+id/quantity_name"
+        android:layout_width="@dimen/wrap_content"
+        android:layout_height="@dimen/wrap_content"
+        android:layout_marginBottom="@dimen/marginbottom"
         android:padding="@dimen/textview_padding"
-        android:text="Quantity"
+        android:text="@string/quantity"
         android:textAllCaps="true" />
 
 
     <Button
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginLeft="8dp"
+        android:id="@+id/plus_button"
+        android:layout_width="@dimen/buttonsize"
+        android:layout_height="@dimen/buttonsize"
+        android:layout_marginLeft="@dimen/marginleft"
         android:onClick="increment"
         android:padding="@dimen/button_padding"
-        android:text="+"
+        android:text="@string/plusbutton"
 
         />
 
     <TextView
         android:id="@+id/quantity_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="-16dp"
-        android:layout_marginTop="-16dp"
+        android:layout_width="@dimen/wrap_content"
+        android:layout_height="@dimen/wrap_content"
+        android:layout_marginBottom="@dimen/marginbottom"
+        android:layout_marginTop="@dimen/margintop"
         android:padding="@dimen/textview_padding"
-        android:text="0"
+        android:text="@string/zero"
         android:textColor="@android:color/black"
         android:textSize="16dp" />
 
     <Button
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginLeft="8dp"
+        android:id="@+id/minus_button"
+        android:layout_width="@dimen/buttonsize"
+        android:layout_height="@dimen/buttonsize"
+        android:layout_marginLeft="@dimen/marginleft"
         android:onClick="decrement"
         android:padding="@dimen/button_padding"
-        android:text="-"
+        android:text="@string/minusbutton"
 
         />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="-16dp"
+        android:id="@+id/price_name"
+        android:layout_width="@dimen/wrap_content"
+        android:layout_height="@dimen/wrap_content"
+        android:layout_marginBottom="@dimen/marginbottom"
         android:padding="@dimen/textview_padding"
-        android:text="price"
+        android:text="@string/price"
         android:textAllCaps="true" />
 
     <TextView
         android:id="@+id/price_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/wrap_content"
+        android:layout_height="@dimen/wrap_content"
         android:padding="@dimen/textview_padding"
-        android:text="0"
+        android:text="@string/zero"
         android:textColor="@android:color/black"
-        android:textSize="16dp" />
+        android:textSize="@dimen/font_size" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
+        android:id="@+id/order_button"
+        android:layout_width="@dimen/wrap_content"
+        android:layout_height="@dimen/wrap_content"
+        android:layout_marginLeft="@dimen/marginleft"
         android:onClick="submitOrder"
         android:padding="@dimen/button_padding"
-        android:text="order"
+        android:text="@string/order"
 
         />
 
