--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <item name="match_parent" format="integer" type="dimen">-1</item>
+    <item name="wrap_content" format="integer" type="dimen">-2</item>
     <dimen name="textview_padding">16dp</dimen>
     <dimen name="button_padding">16dp</dimen>
+    <dimen name="buttonsize">48dp</dimen>
+    <dimen name="marginbottom">-16dp</dimen>
+    <dimen name="margintop">-16dp</dimen>
+    <dimen name="marginleft">8dp</dimen>
+    <dimen name="font_size">16sp</dimen>
 </resources>
