--- a/app/src/main/res/layout/activity_just_java.xml
+++ b/app/src/main/res/layout/activity_just_java.xml
@@ -16,39 +16,47 @@
         android:text="@string/quantity"
         android:textAllCaps="true" />
 
-
-    <Button
-        android:id="@+id/plus_button"
-        android:layout_width="@dimen/buttonsize"
-        android:layout_height="@dimen/buttonsize"
-        android:layout_marginLeft="@dimen/marginleft"
-        android:onClick="increment"
-        android:padding="@dimen/button_padding"
-        android:text="@string/plusbutton"
-
-        />
-
-    <TextView
-        android:id="@+id/quantity_text_view"
-        android:layout_width="@dimen/wrap_content"
+    <LinearLayout
+        android:layout_width="@dimen/match_parent"
         android:layout_height="@dimen/wrap_content"
-        android:layout_marginBottom="@dimen/marginbottom"
-        android:layout_marginTop="@dimen/margintop"
-        android:padding="@dimen/textview_padding"
-        android:text="@string/zero"
-        android:textColor="@android:color/black"
-        android:textSize="16dp" />
+        android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/minus_button"
-        android:layout_width="@dimen/buttonsize"
-        android:layout_height="@dimen/buttonsize"
-        android:layout_marginLeft="@dimen/marginleft"
-        android:onClick="decrement"
-        android:padding="@dimen/button_padding"
-        android:text="@string/minusbutton"
 
-        />
+        <Button
+            android:id="@+id/minus_button"
+            android:layout_width="@dimen/buttonsize"
+            android:layout_height="@dimen/buttonsize"
+            android:layout_marginLeft="@dimen/marginleft"
+            android:onClick="decrement"
+            android:padding="@dimen/button_padding"
+            android:text="@string/minusbutton"
+
+            />
+
+
+        <TextView
+            android:id="@+id/quantity_text_view"
+            android:layout_width="@dimen/wrap_content"
+            android:layout_height="@dimen/wrap_content"
+            android:layout_marginBottom="@dimen/marginbottom"
+            android:padding="@dimen/textview_padding"
+            android:text="@string/zero"
+            android:textColor="@android:color/black"
+            android:textSize="@dimen/font_size" />
+
+        <Button
+            android:id="@+id/plus_button"
+            android:layout_width="@dimen/buttonsize"
+            android:layout_height="@dimen/buttonsize"
+            android:layout_marginLeft="@dimen/marginleft"
+            android:onClick="increment"
+            android:padding="@dimen/button_padding"
+            android:text="@string/plusbutton"
+
+            />
+
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/price_name"
